Creating and Styling the Nav Bar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
-  </head>
+    </head>
   <body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <input type="text" placeholder="Search..">
+    </div>
+
     <div id="main-container" class ="parent">
     </div>
     <!-- Script -->
