--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <div class="modal-content">
           <div class="modal-header">
             <span class="close">&times;</span>
-            <h2>Modal Header</h2>
+            <h2>Country Viewer</h2>
           </div>
           <div id="modal-body" class ="modally">
             
           </div>
           <div class="modal-footer">
-            <h3>Countries</h3>
+            <h3>@noahmwangi</h3>
           </div>
         </div>
         </div>
