--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Stylesheet icons and fonts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
   <body>
+    <!--Creating the Nav Component -->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <div class="search-container">
           <input type="text" placeholder="Search.." id="country-input">
           <button type="submit" id="search"><i class="fa fa-search"></i></button>
       </div>
-      <!-- The Modal -->
+      <!-- Creating The Modal -->
       <div id="myModal" class="modal">
 
         <!-- Modal content -->
@@ -31,8 +33,14 @@
           <div id="modal-body" class ="modally">
             
           </div>
+          <!-- Creating the Comment Section within the modal component-->
           <div class="modal-footer">
-            <h3>@noahmwangi</h3>
+            <ul id="review-list">
+            </ul>
+            <form id="review-form">
+              <label for="review">Your Review:</label>
+              <textarea id="review"></textarea>
+              <button type="submit">Add review</button>
           </div>
         </div>
         </div>
