--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <ul id="review-list">
             </ul>
             <form id="review-form">
-              <label for="review">Your Review:</label>
+              <label for="review">Comment:</label>
               <textarea id="review"></textarea>
-              <button type="submit">Add review</button>
+              <button type="submit">Add comment</button>
           </div>
         </div>
         </div>
