Improved some comments

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     <!--Creating the Nav Component -->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
+      <div class="dropdown">
+        <button class="dropbtn">Region
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </div>
       <div class="search-container">
           <input type="text" placeholder="Search.." id="country-input">
           <button type="submit" id="search"><i class="fa fa-search"></i></button>
