--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <div class="dropdown">
-        <button class="dropbtn">Region
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+        <label for="region">Select a Region:</label>
+        <select name="region-input" id="reg-input">
+          <option value="africa">Africa</option>
+          <option value="americas">Americas</option>
+          <option value="asia">Asia</option>
+          <option value="europe">Europe</option>
+          <option value="oceania">Oceania</option>
+        </select>
         </div>
-      </div>
       <div class="search-container">
           <input type="text" placeholder="Search.." id="country-input">
           <button type="submit" id="search"><i class="fa fa-search"></i></button>
